# qrcode-wasm

./: .gitignore  Cargo.toml  build.sh  index.html  license.md  readme.md  test.html
pkg/: qr.js  qrcode_wasm_bg.wasm
src/: lib.rs
