[package]
name = "qrcode-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
wasm-bindgen = "0.2.83"
